--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -701,8 +701,14 @@
      <Reference Include="Unity.Services.Analytics.Editor">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Services.Analytics.Editor.dll</HintPath>
      </Reference>
+     <Reference Include="Unity.RenderPipelines.Core.Runtime">
+     <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Runtime.dll</HintPath>
+     </Reference>
      <Reference Include="Unity.Postprocessing.Runtime">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Postprocessing.Runtime.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Burst.Editor">
+     <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Burst.Editor.dll</HintPath>
      </Reference>
      <Reference Include="Unity.Services.Core">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Services.Core.dll</HintPath>
@@ -719,14 +725,26 @@
      <Reference Include="Unity.Formats.Fbx.Runtime">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Formats.Fbx.Runtime.dll</HintPath>
      </Reference>
+     <Reference Include="Unity.RenderPipelines.Core.Editor">
+     <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Mathematics.Editor">
+     <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Mathematics.Editor.dll</HintPath>
+     </Reference>
      <Reference Include="Unity.Services.Core.Environments">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Services.Core.Environments.dll</HintPath>
      </Reference>
      <Reference Include="Unity.Performance.Profile-Analyzer.Editor">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Performance.Profile-Analyzer.Editor.dll</HintPath>
      </Reference>
+     <Reference Include="Unity.RenderPipelines.Core.ShaderLibrary">
+     <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
+     </Reference>
      <Reference Include="Unity.Formats.Fbx.Editor">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Formats.Fbx.Editor.dll</HintPath>
+     </Reference>
+     <Reference Include="PPv2URPConverters">
+     <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/PPv2URPConverters.dll</HintPath>
      </Reference>
      <Reference Include="Unity.TextMeshPro">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
@@ -740,11 +758,26 @@
      <Reference Include="Unity.Toolchain.Win-x86_64-Linux-x86_64">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Toolchain.Win-x86_64-Linux-x86_64.dll</HintPath>
      </Reference>
+     <Reference Include="Unity.RenderPipelines.Universal.Editor">
+     <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.RenderPipelines.Universal.Editor.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
+     <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
+     </Reference>
      <Reference Include="Unity.Sysroot.Linux_x86_64">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Sysroot.Linux_x86_64.dll</HintPath>
      </Reference>
+     <Reference Include="Unity.RenderPipelines.Universal.Runtime">
+     <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.RenderPipelines.Universal.Runtime.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Burst">
+     <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Burst.dll</HintPath>
+     </Reference>
      <Reference Include="Unity.Timeline.Editor">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.ShaderGraph.Editor">
+     <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.ShaderGraph.Editor.dll</HintPath>
      </Reference>
      <Reference Include="Unity.VisualStudio.Editor">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.VisualStudio.Editor.dll</HintPath>
@@ -754,6 +787,9 @@
      </Reference>
      <Reference Include="UnityEngine.UI">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.RenderPipeline.Universal.ShaderLibrary">
+     <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.RenderPipeline.Universal.ShaderLibrary.dll</HintPath>
      </Reference>
      <Reference Include="Unity.Timeline">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
@@ -788,8 +824,17 @@
      <Reference Include="Unity.Mobile.AndroidLogcat.Editor">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Mobile.AndroidLogcat.Editor.dll</HintPath>
      </Reference>
+     <Reference Include="Unity.Mathematics">
+     <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Mathematics.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.RenderPipelines.Universal.Shaders">
+     <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.RenderPipelines.Universal.Shaders.dll</HintPath>
+     </Reference>
      <Reference Include="Unity.TextMeshPro.Editor">
      <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Searcher.Editor">
+     <HintPath>/Users/josh/workbench/bap-test/Library/ScriptAssemblies/Unity.Searcher.Editor.dll</HintPath>
      </Reference>
   </ItemGroup>
   <ItemGroup>
