--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.mobile.android-logcat": "1.3.2",
     "com.unity.performance.profile-analyzer": "1.2.2",
     "com.unity.postprocessing": "3.2.2",
+    "com.unity.render-pipelines.universal": "14.0.9",
     "com.unity.services.analytics": "5.0.0",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.toolchain.macos-arm64-linux-x86_64": "2.0.0",
